--- a/src/main/java/logic/Presentacion/RegistrarUsuarioCU.form
+++ b/src/main/java/logic/Presentacion/RegistrarUsuarioCU.form
@@ -40,66 +40,72 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
+              <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="190" max="32767" attributes="0"/>
                           <Component id="jButtonRUA" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
                           <Component id="jButtonRUC" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
                           <Component id="jButtonRUM" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="155" max="-2" attributes="0"/>
-                          <Component id="TextoIngresedatosU" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Component id="jCheckBoxPROF" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                              <Component id="TextoInstiPROF" alignment="0" max="32767" attributes="0"/>
-                              <Component id="TextoNombreU" alignment="0" min="-2" pref="67" max="-2" attributes="0"/>
-                              <Component id="TextoApellidoU" alignment="0" min="-2" pref="67" max="-2" attributes="0"/>
-                              <Component id="TextoNicknameU" alignment="0" min="-2" pref="67" max="-2" attributes="0"/>
-                              <Component id="TextoEmailU" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="TextoFNU" alignment="0" max="32767" attributes="0"/>
-                              <Component id="TextoDescProf" alignment="0" max="32767" attributes="0"/>
-                              <Component id="TextoBioProf" alignment="0" max="32767" attributes="0"/>
-                              <Component id="TextoWebProf" alignment="0" min="-2" pref="113" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace min="-2" pref="145" max="-2" attributes="0"/>
+                      <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
-                                  <Component id="jTextFieldNicknameU" min="-2" pref="201" max="-2" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jComboBoxNicknameU" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="155" max="-2" attributes="0"/>
+                                  <Component id="TextoIngresedatosU" min="-2" max="-2" attributes="0"/>
                               </Group>
+                              <Component id="jCheckBoxPROF" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Group type="102" alignment="0" attributes="0">
-                                  <Component id="jTextFieldNombreU" min="-2" pref="201" max="-2" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jComboBoxNombreU" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="jTextFieldApellidoU" min="-2" pref="201" max="-2" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jComboBoxApellidoU" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="jTextFieldEmailU" min="-2" pref="201" max="-2" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jComboBoxEmailU" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <Component id="jTextFieldBioProf" alignment="0" min="-2" pref="201" max="-2" attributes="0"/>
-                              <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                                  <Component id="jComboBoxRUInstitucion" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="jTextFieldWebProf" alignment="0" min="-2" pref="201" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                                  <Component id="jDateChooserFNU" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="jTextFieldDescProf" alignment="0" min="-2" pref="201" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                          <Component id="TextoInstiPROF" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="TextoApellidoU" alignment="0" min="-2" pref="67" max="-2" attributes="0"/>
+                                          <Component id="TextoNicknameU" alignment="0" min="-2" pref="67" max="-2" attributes="0"/>
+                                          <Component id="TextoEmailU" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="TextoFNU" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="TextoDescProf" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="TextoBioProf" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="TextoWebProf" alignment="0" min="-2" pref="113" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Component id="TextoNombreU" alignment="0" min="-2" pref="67" max="-2" attributes="0"/>
+                                      <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <EmptySpace min="-2" pref="149" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="jTextFieldBioProf" alignment="0" min="-2" pref="201" max="-2" attributes="0"/>
+                                      <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                                          <Component id="jComboBoxRUInstitucion" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="jTextFieldWebProf" alignment="0" min="-2" pref="201" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                                          <Component id="jDateChooserFNU" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="jTextFieldDescProf" alignment="0" min="-2" pref="201" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <Group type="103" groupAlignment="1" attributes="0">
+                                              <Component id="jTextFieldNombreU" min="-2" pref="201" max="-2" attributes="0"/>
+                                              <Component id="jTextFieldApellidoU" min="-2" pref="201" max="-2" attributes="0"/>
+                                              <Component id="jTextFieldNicknameU" alignment="1" min="-2" pref="201" max="-2" attributes="0"/>
+                                              <Component id="jTextFieldEmailU" alignment="1" min="-2" pref="201" max="-2" attributes="0"/>
+                                              <Component id="jTextFieldContrasena" alignment="1" min="-2" pref="201" max="-2" attributes="0"/>
+                                              <Component id="jTextFieldCContrasena" alignment="1" min="-2" pref="201" max="-2" attributes="0"/>
+                                          </Group>
+                                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Component id="jComboBoxNombreU" min="-2" max="-2" attributes="0"/>
+                                              <Component id="jComboBoxApellidoU" min="-2" max="-2" attributes="0"/>
+                                              <Component id="jComboBoxNicknameU" min="-2" max="-2" attributes="0"/>
+                                              <Component id="jComboBoxEmailU" min="-2" max="-2" attributes="0"/>
+                                          </Group>
+                                      </Group>
+                                  </Group>
                               </Group>
                           </Group>
+                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -109,48 +115,50 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace max="-2" attributes="0"/>
                   <Component id="TextoIngresedatosU" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jTextFieldNombreU" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
-                      <Component id="jComboBoxNombreU" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="TextoNombreU" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
+                      <Component id="jComboBoxNombreU" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="TextoApellidoU" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                      <Component id="jTextFieldApellidoU" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                      <Component id="jComboBoxApellidoU" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="TextoApellidoU" alignment="0" max="32767" attributes="0"/>
-                      <Group type="103" alignment="0" groupAlignment="3" attributes="0">
-                          <Component id="jTextFieldApellidoU" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
-                          <Component id="jComboBoxApellidoU" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jTextFieldNicknameU" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                      <Component id="TextoNicknameU" alignment="3" pref="32" max="32767" attributes="0"/>
+                      <Component id="jComboBoxNicknameU" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jTextFieldEmailU" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                      <Component id="jComboBoxEmailU" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="TextoEmailU" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="TextoNicknameU" alignment="0" max="32767" attributes="0"/>
-                      <Group type="103" alignment="0" groupAlignment="3" attributes="0">
-                          <Component id="jTextFieldNicknameU" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
-                          <Component id="jComboBoxNicknameU" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="TextoEmailU" alignment="0" max="32767" attributes="0"/>
-                      <Group type="103" alignment="0" groupAlignment="3" attributes="0">
-                          <Component id="jTextFieldEmailU" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
-                          <Component id="jComboBoxEmailU" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
+                      <Component id="jTextFieldContrasena" alignment="0" min="-2" pref="35" max="-2" attributes="0"/>
+                      <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="1" attributes="0">
+                      <Group type="102" attributes="0">
+                          <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                           <Component id="TextoFNU" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="TextoDescProf" min="-2" pref="32" max="-2" attributes="0"/>
                       </Group>
-                      <Group type="102" alignment="0" attributes="0">
+                      <Group type="102" attributes="0">
+                          <Component id="jTextFieldCContrasena" min="-2" pref="25" max="-2" attributes="0"/>
+                          <EmptySpace pref="15" max="32767" attributes="0"/>
                           <Component id="jDateChooserFNU" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
                           <Component id="jTextFieldDescProf" min="-2" pref="31" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -180,7 +188,7 @@
                       <Component id="jButtonRUC" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jButtonRUM" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="13" max="32767" attributes="0"/>
+                  <EmptySpace pref="12" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -365,6 +373,20 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonRUMActionPerformed"/>
           </Events>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabel1">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Contrasena"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JTextField" name="jTextFieldContrasena">
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabel2">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Confirmar Contrasena"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JTextField" name="jTextFieldCContrasena">
         </Component>
       </SubComponents>
     </Container>
